feat(action): create route to fetch data from mongodb

--- a/.env
+++ b/.env
@@ -2,3 +2,5 @@ PAGE_TITLE=YZ-QUIZ
 PAGE_DESCRIPTION="This is a Quiz page around Caribean Stuff"
 OPENWEATHER_API_KEY=
 OPENWEATHER_URL=
+MONGO_API_URL=
+MONGO_API_KEY=
