--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@yttiiz/utils": "npm:@jsr/yttiiz__utils@^0.1.80",
+		"mongodb": "^6.8.1",
 		"next": "14.2.6",
 		"react": "^18",
 		"react-dom": "^18",
