feat(mongodb): create a Mongo service to handle db connexion

--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ PAGE_TITLE=YZ-QUIZ
 PAGE_DESCRIPTION="This is a Quiz page around Caribean Stuff"
 OPENWEATHER_API_KEY=
 OPENWEATHER_URL=
-MONGO_API_URL=
-MONGO_API_KEY=
+MONGODB_HOST=
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
