--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@yttiiz/utils": "npm:@jsr/yttiiz__utils@^0.1.91",
+		"bcrypt": "^5.1.1",
 		"mongodb": "^6.8.1",
 		"next": "14.2.6",
 		"react": "^18",
@@ -18,6 +19,7 @@
 		"zustand": "^4.5.5"
 	},
 	"devDependencies": {
+		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
