--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"bcrypt": "^5.1.1",
 		"mongodb": "^6.8.1",
 		"next": "14.2.6",
+		"nodemailer": "^6.9.15",
 		"react": "^18",
 		"react-dom": "^18",
 		"zustand": "^4.5.5"
@@ -21,6 +22,7 @@
 	"devDependencies": {
 		"@types/bcrypt": "^5.0.2",
 		"@types/node": "^20",
+		"@types/nodemailer": "^6.4.16",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"eslint": "^8",
