fix(vercel): WIP - change host env variable name

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+APP_URL="http://localhost:3000"
 PAGE_TITLE=YZ-QUIZ
 PAGE_DESCRIPTION="This is a Quiz page around Caribean Stuff"
 OPENWEATHER_API_KEY=
