--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"bcrypt": "^5.1.1",
 		"mongodb": "^6.8.1",
 		"next": "14.2.6",
+		"next-auth": "5.0.0-beta.25",
 		"nodemailer": "^6.9.15",
 		"react": "^18",
 		"react-dom": "^18",
