--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@yttiiz/utils": "npm:@jsr/yttiiz__utils@^0.2.0",
 		"bcrypt": "^5.1.1",
+		"cheerio": "^1.0.0",
 		"mongodb": "^6.8.1",
 		"next": "14.2.6",
 		"next-auth": "5.0.0-beta.25",
