feat(cheerio): create a 'Cheerio' utils class & display data webscrapped from 'rattrapages-actu'

--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ PAGE_TITLE=YZ-QUIZ
 PAGE_DESCRIPTION="This is a Quiz page around Caribean Stuff"
 OPENWEATHER_API_KEY=
 OPENWEATHER_URL=
+RATTRAPAGE_ACTU_URL=
 MONGODB_HOST=
 MONGODB_USERNAME=
 MONGODB_PASSWORD=
