feat(about): create a Cheerio method to getData from another website

--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ PAGE_DESCRIPTION="This is a Quiz page around Caribean Stuff"
 OPENWEATHER_API_KEY=
 OPENWEATHER_URL=
 RATTRAPAGE_ACTU_URL=
+ABOUT_URL=
 MONGODB_HOST=
 MONGODB_USERNAME=
 MONGODB_PASSWORD=
