--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "quiz-time",
 	"version": "1.0.0",
 	"private": true,
+	"engines": {
+    "node": ">=20.0.0"
+  },
 	"scripts": {
 		"dev": "next dev",
 		"build": "next build",
